--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ mitmproxy = "^7.0.4"
 typer = "^0.4.0"
 pydantic = "^1.9.0"
 m3u8 = "^0.10.0"
+relational-stream = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
